--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-chrono = "0.4.24"
+anyhow = "1.0.75"
 crossterm = "0.27.0"
-num-traits = "0.2.15"
 ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
+time = { version = "0.3.30", features = ["local-offset"] }
+
+[dev-dependencies]
+rstest = { version = "0.18.2", default-features = false }
