--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,7 +16,5 @@ anyhow = "1.0.75"
 crossterm = "0.27.0"
 lexopt = "0.3.0"
 ratatui = { version = "0.24.0", default-features = false, features = ["crossterm"] }
+thiserror = "1.0.50"
 time = { version = "0.3.30", features = ["local-offset", "macros", "parsing"] }
-
-[dev-dependencies]
-rstest = { version = "0.18.2", default-features = false }
