[skip ci] Improve Dependabot exclusion condition

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -50,7 +50,7 @@ jobs:
           toolchain: ${{ steps.minimal-version.outputs.msrv }}
 
       - name: Activate cache
-        if: github.actor != 'dependabot[bot]'
+        if: "!startsWith(github.head_ref, 'dependabot/')"
         uses: Swatinem/rust-cache@v2
 
       - name: Build crate
@@ -74,7 +74,7 @@ jobs:
           components: llvm-tools
 
       - name: Activate cache
-        if: github.actor != 'dependabot[bot]'
+        if: "!startsWith(github.head_ref, 'dependabot/')"
         uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-llvm-cov
@@ -104,7 +104,7 @@ jobs:
           components: clippy, rustfmt
 
       - name: Activate cache
-        if: github.actor != 'dependabot[bot]'
+        if: "!startsWith(github.head_ref, 'dependabot/')"
         uses: Swatinem/rust-cache@v2
 
       - name: Check code
