--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,7 +19,7 @@ jobs:
         os:
           - ubuntu-latest
         toolchain:
-          - minimal
+          - msrv
           - stable
         include:
           - os: macos-latest
@@ -31,26 +31,26 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install Rust
-        if: matrix.toolchain != 'minimal'
+        if: matrix.toolchain != 'msrv'
         uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.toolchain }}
 
-      - name: Determine minimal supported Rust
-        if: matrix.toolchain == 'minimal'
-        id: minimal-version
+      - name: Determine minimum supported Rust version
+        if: matrix.toolchain == 'msrv'
+        id: msrv
         run: |
           rust_version="$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[0].rust_version')"
           echo "msrv=$rust_version" >> "$GITHUB_OUTPUT"
 
-      - name: Install minimal supported Rust
-        if: matrix.toolchain == 'minimal'
+      - name: Install minimum supported Rust version
+        if: matrix.toolchain == 'msrv'
         uses: dtolnay/rust-toolchain@master
         with:
-          toolchain: ${{ steps.minimal-version.outputs.msrv }}
+          toolchain: ${{ steps.msrv.outputs.msrv }}
 
       - name: Activate cache
-        if: "!startsWith(github.head_ref, 'dependabot/')"
+        if: "!startsWith(github.head_ref, 'renovate/')"
         uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-hack
@@ -61,6 +61,36 @@ jobs:
 
       - name: Test crate
         run: cargo hack --workspace --feature-powerset test --verbose
+
+  minimal-versions:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repository
+        uses: actions/checkout@v4
+
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@master
+        with:
+          toolchain: stable
+
+      - name: Install nightly Rust
+        # Needed by cargo-minimal-versions
+        run: rustup update nightly
+
+      - name: Activate cache
+        if: "!startsWith(github.head_ref, 'renovate/')"
+        uses: Swatinem/rust-cache@v2
+
+      - name: Install cargo-hack and cargo-minimal-versions
+        uses: taiki-e/install-action@v2
+        with:
+          tool: cargo-hack,cargo-minimal-versions
+
+      - name: Build crate
+        run: cargo minimal-versions --direct --workspace --feature-powerset build --all-targets --verbose
+
+      - name: Test crate
+        run: cargo minimal-versions --direct --workspace --feature-powerset test --verbose
 
   coverage:
     # This is separate from the main tests because cargo-llvm-cov doesn't run
@@ -77,7 +107,7 @@ jobs:
           components: llvm-tools
 
       - name: Activate cache
-        if: "!startsWith(github.head_ref, 'dependabot/')"
+        if: "!startsWith(github.head_ref, 'renovate/')"
         uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-llvm-cov
@@ -108,7 +138,7 @@ jobs:
           components: clippy, rustfmt
 
       - name: Activate cache
-        if: "!startsWith(github.head_ref, 'dependabot/')"
+        if: "!startsWith(github.head_ref, 'renovate/')"
         uses: Swatinem/rust-cache@v2
 
       - name: Install cargo-hack
