--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ publish = false
 
 [dependencies]
 anyhow = "1.0.75"
-crossterm = "0.28.1"
+crossterm = { version = "0.29.0", default-features = false, features = ["events", "windows"] }
 lexopt = "0.3.0"
 ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
 thiserror = "2.0.11"
