--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ publish = false
 anyhow = "1.0.75"
 crossterm = { version = "0.29.0", default-features = false, features = ["events", "windows"] }
 lexopt = "0.3.0"
-ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
+ratatui = "0.30.0"
 thiserror = "2.0.11"
 time = { version = "0.3.37", features = ["local-offset", "macros", "parsing"] }
 
